--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,7 +11,7 @@ spring:
           #uri: https://github.com/huzhicheng/config-only-a-demo #配置文件所在仓库
           default-label: master #配置文件分支
           search-paths: config  #配置文件所在根目录
-#eureka:
- # client:
-    #service-url:
-   #   defaultZone: http://localhost:8761/eureka/
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
