--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,7 +10,16 @@ spring:
           uri: http://172.24.16.74/jack/config-only-a-demo.git #配置文件所在仓库
           default-label: master #配置文件分支
           search-paths: config  #配置文件所在根目录
+# Eureka配置
 eureka:
+  instance:
+    # eureka服务端的实例名称
+    hostname: client
+    instance-id: ${spring.application.name}:${spring.cloud.client.ip-address}:${server.port}:${random.value}
+    prefer-ip-address: true
   client:
     service-url:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://localhost:8761/eureka
+logging:
+  level:
+    org.springframework.cloud.gateway: debug
