--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,9 +7,10 @@ spring:
     config:
       server:
         git:
-          uri: http://172.24.16.74/jack/config-only-a-demo.git #配置文件所在仓库
+#          uri: http://172.24.16.74/jack/config-only-a-demo.git #配置文件所在仓库
+          uri: http://172.24.16.74/qyzx-group/qyzx-conf.git #配置文件所在仓库
           default-label: master #配置文件分支
-          search-paths: config  #配置文件所在根目录
+          search-paths: conf  #配置文件所在根目录
 # Eureka配置
 eureka:
   instance:
