--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,10 +7,13 @@ spring:
     config:
       server:
         git:
-          uri: http://172.24.16.74/jack/config-only-a-demo.git #配置文件所在仓库
+#          uri: http://172.24.16.74/jack/config-only-a-demo.git #配置文件所在仓库
           #uri: https://github.com/huzhicheng/config-only-a-demo #配置文件所在仓库
+#          uri: https://github.com/subzero1/config-only-a-demo #配置文件所在仓库
+          uri: https://github.com/subzero1/qyzx-conf #配置文件所在仓库
           default-label: master #配置文件分支
-          search-paths: config  #配置文件所在根目录
+#          search-paths: config  #配置文件所在根目录
+          search-paths: conf  #配置文件所在根目录
 eureka:
   client:
     service-url:
